@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.12.16-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-12-16 21:49:45, took 00:16:08, with 50 workers, on 4112 cases, 0 failed, 0 traces, 6 retries
+-;-;-;2025-12-17 00:38:42, took 00:13:08, with 50 workers, on 4114 cases, 0 failed, 0 traces, 3 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -2031,6 +2031,8 @@ http://sources.freertr.org/cfg/p4lang-crypt200.tst;p4lang-crypt200.tst;success;p
 http://sources.freertr.org/cfg/p4lang-crypt201.tst;p4lang-crypt201.tst;success;p4lang: macsec over mgre
 http://sources.freertr.org/cfg/p4lang-crypt202.tst;p4lang-crypt202.tst;success;p4lang: sgt over mgre
 http://sources.freertr.org/cfg/p4lang-crypt203.tst;p4lang-crypt203.tst;success;p4lang: mgre with packout
+http://sources.freertr.org/cfg/p4lang-crypt204.tst;p4lang-crypt204.tst;success;p4lang: monitor session
+http://sources.freertr.org/cfg/p4lang-crypt205.tst;p4lang-crypt205.tst;success;p4lang: flow inspection
 http://sources.freertr.org/cfg/p4lang-rout001.tst;p4lang-rout001.tst;success;p4lang: routing
 http://sources.freertr.org/cfg/p4lang-rout002.tst;p4lang-rout002.tst;success;p4lang: bridging
 http://sources.freertr.org/cfg/p4lang-rout003.tst;p4lang-rout003.tst;success;p4lang: mpls core
