@@ -2027,6 +2027,8 @@ qc pass: p4lang: ipsec with aes256ofb
 qc pass: p4lang: macsec over mgre
 qc pass: p4lang: sgt over mgre
 qc pass: p4lang: mgre with packout
+qc pass: p4lang: monitor session
+qc pass: p4lang: flow inspection
 qc pass: p4lang: routing
 qc pass: p4lang: bridging
 qc pass: p4lang: mpls core
