@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.12.16-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-12-16 21:49:45, took 00:16:08, with 50 workers, on 4112 cases, 0 failed, 0 traces, 6 retries<br/>
+tested: 2025-12-17 00:38:42, took 00:13:08, with 50 workers, on 4114 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -2043,6 +2043,8 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt201.tst">p4lang-crypt201.tst</a></td><td>success</td><td>p4lang: macsec over mgre</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt202.tst">p4lang-crypt202.tst</a></td><td>success</td><td>p4lang: sgt over mgre</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt203.tst">p4lang-crypt203.tst</a></td><td>success</td><td>p4lang: mgre with packout</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt204.tst">p4lang-crypt204.tst</a></td><td>success</td><td>p4lang: monitor session</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt205.tst">p4lang-crypt205.tst</a></td><td>success</td><td>p4lang: flow inspection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout001.tst">p4lang-rout001.tst</a></td><td>success</td><td>p4lang: routing</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout002.tst">p4lang-rout002.tst</a></td><td>success</td><td>p4lang: bridging</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout003.tst">p4lang-rout003.tst</a></td><td>success</td><td>p4lang: mpls core</td></tr>
