@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.12.16-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-12-16 22:02:03, took 00:11:47, with 50 workers, on 857 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2025-12-17 00:52:44, took 00:13:31, with 50 workers, on 857 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
