@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.12.16-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-12-16 22:02:03, took 00:11:47, with 50 workers, on 857 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2025-12-17 00:52:44, took 00:13:31, with 50 workers, on 857 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
